--- a/src/CSS/Nav.css
+++ b/src/CSS/Nav.css
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  background-color: black;
+  background-color: blueviolet;
   padding: 15px 0px;
   text-align: right;
 }
